# trader_bot_hitbtc

./: README.md  pyproject.toml
src/: ExchangeClient.py  config.json  trade.py
