[project]
name = "trader_bot_hitbtc"
version = "0.1.0"
description = "A BTC trader bot for the Hitbtc crypto exchange."
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["trade", "bitcoin", "bot", "cryptocurrency"]
authors = [
  {email = "gfred006 at uottawa.ca"},
  {name = "Gustavo C. S. Frederico"}
]